<resources>
    <string name="app_name" translatable="false">Neurnet</string>
    <string name="about_us_description">We create engaging brand assets and trusted content for your site, and then market it to authoritative sites across the web. Clients also get consulting from Jim Boykin and Ann Smarty. We\'ve been trusted since 1999. Peace and Love.</string>
    <string name="activity_description_send_ticket">Customers who are looking for help are often stressed and frustrated, and when they can only communicate with you through text chats or emails. It’s easy for them to feel unimportant or ignored. In my career, I’ve heard versions of “I want to talk to a real person, not a robot!” from customers many times.
    So, I,m a real person, write what ever you want.</string>
    <string name="content_description_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="content_description_navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="content_description_nav_header_img_avatar" translatable="false">This is avatar</string>
    <string name="content_description_show_rssi_of_ble_device" translatable="false">RSSI of Ble device</string>
    <string name="content_description_members_list_item_img_avatar" translatable="false">avatar of device members</string>
    <string name="content_description_members_list_item_img_action" translatable="false">action of device members</string>
    <string name="content_description_login_screen_login_fragment" translatable="false">static image in login fragment</string>
    <string name="content_description_new_device_screen_add_device_fragment">static image in add device fragment</string>
    <string name="content_description_temperature_celsius_lock_page">centigrade symbol</string>
    <string name="content_description_lock_status_symbol_lock_page">lock status</string>
    <string name="content_description_water_percent_lock_page">water percent</string>
    <string name="content_description_valid_status_lock_page">This is an alarm image shows data is invalid</string>
    <string name="content_description_valid_status_gateway_page">This is an alarm image shows data is invalid</string>
    <string name="content_description_connected_devices_gateway_page">Show if any device connect to gateway</string>
    <string name="content_description_item_action_disconnect_device">This is action to disconnect device</string>
    <string name="content_description_item_connection_status_of_ble_device">Show connection status of available ble device</string>
    <string name="content_description_calibration_lock_idle_position_status">green if idle position set and gray if not set</string>
    <string name="content_description_calibration_lock_latch_position_status">green if latch position set and gray if not set</string>
    <string name="content_description_calibration_lock_lock_position_status">green if lock position set and gray if not set</string>
    <string name="content_description_notification_list_item_img_priority">show priority of notification</string>
    <string name="content_description_about_us_activity_img_logo">This is logo at top of about us view</string>
    <string name="activity_title_send_ticket">Send your Feedback</string>
    <string name="fragment_button_add_new_device">Add new device</string>
    <string name="fragment_button_sign_up">SignUp</string>
    <string name="fragment_button_login">LOGIN</string>
    <string name="fragment_hint_email">Email : example@mail.com</string>
    <string name="fragment_hint_password">Password</string>
    <string name="fragment_hint_confirm_password">Confirm Password</string>
    <string name="fragment_hint_name">Name</string>
    <string name="fragment_hint_mobile_number">Mobile number</string>
    <string name="fragment_hint_password_old">Old password</string>
    <string name="fragment_hint_password_new">New password</string>
    <string name="fragment_hint_ticket_title">Title</string>
    <string name="fragment_hint_ticket_text">Write your feedback</string>
    <string name="fragment_text_view_login">Login</string>
    <string name="fragment_text_view_device_type_lock_page">LOCK</string>
    <string name="fragment_text_view_data_not_synced">Data Not Synced</string>
    <string name="fragment_text_view_firmware_version">Firmware Version</string>
    <string name="fragment_text_view_default_firmware_version">0.0.0</string>
    <string name="fragment_text_view__door_installation">Door Installation</string>
    <string name="fragment_text_view_door_installation_value">Right handed</string>
    <string name="fragment_text_view_lock_stages">Lock Stages</string>
    <string name="fragment_text_view_lock_stages_value">Two stages</string>
    <string name="fragment_text_view_pro_services">Pro Services</string>
    <string name="fragment_text_view_pro_services_description">Not yet</string>
    <string name="fragment_text_view_remove_device">Remove Device</string>
    <string name="fragment_text_view_remove_device_description">If you remove the device, you can just add it again by pairing bluetooth</string>
    <string name="fragment_text_view_change_online_password">Change Online Password</string>
    <string name="fragment_text_view_change_online_password_description">This is reachable when you are Connect to Device</string>
    <string name="fragment_text_view_change_pairing_password">Change Pairing Password</string>
    <string name="fragment_text_view_change_pairing_password_description">This is reachable when you are Connect to Device</string>
    <string name="fragment_text_view_direct_connect">Direct Connect</string>
    <string name="fragment_text_view_sign_up">Sign Up</string>
    <string name="fragment_text_view_forget_password">Forget Password</string>
    <string name="fragment_text_view_door_installation">Door installation</string>
    <string name="fragment_text_view_door_installation_description">Door installation</string>
    <string name="fragment_text_view_device_type">Device type</string>
    <string name="fragment_text_view_hardware_version">Hardware version</string>
    <string name="fragment_text_view_default_hardware_version">0.0.0</string>
    <string name="fragment_text_view_production_date">Production date</string>
    <string name="fragment_text_view_default_production_date">0000:00:00 00:00</string>
    <string name="fragment_text_view_serial_number">Serial number</string>
    <string name="fragment_text_view_default_serial_number_description">sfs_fs45_fs54</string>
    <string name="fragment_text_view_dynamic_id">Dynamic id</string>
    <string name="fragment_text_view_default_dynamic_id_description">8a8as_da85_ks_584185</string>
    <string name="fragment_text_view_reset_device">Reset DEVICE</string>
    <string name="fragment_text_view_device_name">Device Name</string>
    <string name="fragment_text_view_device_type_gateway_page">GATEWAY</string>
    <string name="fragment_text_view_calibration_description">Calibration</string>
    <string name="fragment_text_view_calibration">Calibration</string>
    <string name="dialog_text_view_lost_access">You lost your access to this DEVICE, to update status; login again.</string>
    <string name="dialog_title_pair_with_ble_device">Pairing</string>
    <string name="dialog_title_add_new_device">Add new device</string>
    <string name="dialog_title_forget_password">Forget password</string>
    <string name="dialog_title_change_online_password">Change online password</string>
    <string name="dialog_title_change_pairing_password">Change pairing password</string>
    <string name="dialog_title_add_member">Add member</string>
    <string name="dialog_title_available_devices">Available devices</string>
    <string name="dialog_title_available_networks">Available networks</string>
    <string name="dialog_title_gateway_wifi_network_connect">Connect Gateway to %s</string>
    <string name="dialog_title_door_installation_door_installation">Door installation</string>
    <string name="dialog_title_lock_stages_device_setting">Lock stages</string>
    <string name="dialog_title_remove_device">Remove device</string>
    <string name="dialog_title_remove_member">Remove member</string>
    <string name="dialog_title_reset_device">Reset Device</string>
    <string name="dialog_title_connected_devices">Connected Devices</string>
    <string name="dialog_title_disconnect_device">Disconnect Device</string>
    <string name="dialog_title_calibration_lock">Calibration lock</string>
    <string name="dialog_title_initialize_calibration_lock_confirmation">Initialize calibration lock</string>
    <string name="dialog_title_confirmation_lock_position">Confirmation lock position</string>
    <string name="dialog_title_connect_to_server">Connect to server</string>
    <string name="dialog_title_lose_access">Lose access</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="dialog_button_scan">SCAN</string>
    <string name="dialog_button_add">ADD</string>
    <string name="dialog_button_submit">SUBMIT</string>
    <string name="dialog_button_apply">APPLY</string>
    <string name="dialog_button_pair">PAIR</string>
    <string name="dialog_button_remove">REMOVE</string>
    <string name="dialog_button_reset">RESET</string>
    <string name="dialog_button_connect">CONNECT</string>
    <string name="dialog_button_disconnect">DISCONNECT</string>
    <string name="dialog_button_start">START</string>
    <string name="dialog_button_done">DONE</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_check_box_favorite">Favorite</string>
    <string name="dialog_check_box_admin">Admin</string>
    <string name="dialog_check_box_remove_all_members">Remove all members</string>
    <string name="dialog_check_box_remove_member">Confirm remove member</string>
    <string name="dialog_radio_button_right_handed">Right Handed</string>
    <string name="dialog_radio_button_left_handed">Left Handed</string>
    <string name="dialog_radio_button_ninety_degrees">90 degrees</string>
    <string name="dialog_radio_button_one_stage">One stage</string>
    <string name="dialog_radio_button_two_stages">Two stages</string>
    <string name="dialog_radio_button_three_stages">Three stages</string>
    <string name="dialog_hint_device_name">Device name</string>
    <string name="dialog_hint_serial_number">Serial number</string>
    <string name="dialog_hint_email">Email : example@mail.com</string>
    <string name="dialog_hint_wifi_password">Wifi password</string>
    <string name="dialog_hint_security_password">Security password</string>
    <string name="dialog_text_view_sure">Are you sure?</string>
    <string name="dialog_text_view_confirm_initialize_calibration_lock_sure">Are you sure, you want to calibrate lock?</string>
    <string name="dialog_text_view_idle_position">1. Idle position</string>
    <string name="dialog_text_view_latch_position">2. Latch position</string>
    <string name="dialog_text_view_lock_position">3. Lock position</string>
    <string name="dialog_text_view_message_confirmation_lock_position_idle">Manually set lock in idle position then click APPLY.</string>
    <string name="dialog_text_view_message_confirmation_lock_position_latch">Manually set lock in latch position then click APPLY.</string>
    <string name="dialog_text_view_message_confirmation_lock_position_lock">Manually set lock in lock position then click APPLY.</string>
    <string-array name="dialog_spinner_list_wifi_type">
        <item>OPEN</item>
        <item>WEP</item>
        <item>WPA_PSK</item>
        <item>WPA2_PSK</item>
        <item>WPA_WPA2_PSK</item>
    </string-array>
    <string name="drawer_menu_item_devices">Devices</string>
    <string name="drawer_menu_item_notifications">Notifications</string>
    <string name="drawer_menu_item_support">Support</string>
    <string name="drawer_menu_item_about_us">About us</string>
</resources>