<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogMainStyle">

    <TextView
        android:id="@+id/txv_title_dialog_remove_member"
        style="@style/DialogTitle"
        android:text="@string/dialog_title_remove_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_message_dialog_remove_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:gravity="start|center_vertical"
        android:text="@string/dialog_text_view_sure"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title_dialog_remove_member" />

    <CheckBox
        android:id="@+id/chb_confirm_remove_member_dialog_remove_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableTint="@color/dialog_secondary_color"
        android:focusable="true"
        android:nextFocusDown="@+id/btn_remove_dialog_remove_member"
        android:text="@string/dialog_check_box_remove_member"
        android:textColor="@color/check_box_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_message_dialog_remove_member">

        <requestFocus />

    </CheckBox>

    <Button
        android:id="@+id/btn_remove_dialog_remove_member"
        style="@style/TextButtonStyle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:nextFocusDown="@+id/btn_cancel_dialog_remove_member"
        android:text="@string/dialog_button_remove"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_dialog_remove_member"
        app:layout_constraintTop_toBottomOf="@+id/chb_confirm_remove_member_dialog_remove_member" />

    <Button
        android:id="@+id/btn_cancel_dialog_remove_member"
        style="@style/TextButtonStyle"
        android:layout_marginTop="8dp"
        android:nextFocusDown="@+id/chb_confirm_remove_member_dialog_remove_member"
        android:text="@string/dialog_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chb_confirm_remove_member_dialog_remove_member" />

</android.support.constraint.ConstraintLayout>
