<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout_border"
    android:clickable="true"
    android:focusable="true"
    android:padding="24dp">

    <TextView
        android:id="@+id/txv_title_dialog_initialize_calibration_lock_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:gravity="start|center_vertical"
        android:text="@string/dialog_title_initialize_calibration_lock_confirmation"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_message_dialog_initialize_calibration_lock_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:gravity="start|center_vertical"
        android:text="@string/dialog_text_view_confirm_initialize_calibration_lock_sure"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title_dialog_initialize_calibration_lock_confirmation" />

    <Button
        android:id="@+id/btn_start_dialog_initialize_calibration_lock_confirmation"
        style="@style/TextButtonStyle"
        android:layout_marginEnd="8dp"
        android:nextFocusDown="@+id/btn_cancel_dialog_initialize_calibration_lock_confirmation"
        android:text="@string/dialog_button_start"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_dialog_initialize_calibration_lock_confirmation"
        app:layout_constraintTop_toBottomOf="@+id/txv_message_dialog_initialize_calibration_lock_confirmation" />

    <Button
        android:id="@+id/btn_cancel_dialog_initialize_calibration_lock_confirmation"
        style="@style/TextButtonStyle"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_message_dialog_initialize_calibration_lock_confirmation">

        <requestFocus />

    </Button>

</android.support.constraint.ConstraintLayout>
