<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogMainStyle">

    <TextView
        android:id="@+id/txv_title_dialog_connect_to_server"
        style="@style/DialogTitle"
        android:text="@string/dialog_title_connect_to_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txil_security_code_dialog_connect_to_server"
        android:layout_marginTop="8dp"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_title_dialog_connect_to_server"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/password_eye_color">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_security_code_dialog_connect_to_server"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:hint="@string/dialog_hint_security_password"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/btn_connect_dialog_connect_to_server"
            android:textColor="@color/hintColor"
            android:textColorHint="@color/hintColor">

            <requestFocus />

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_connect_dialog_connect_to_server"
        style="@style/TextButtonStyle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/btn_cancel_dialog_connect_to_server"
        android:nextFocusDown="@+id/btn_cancel_dialog_connect_to_server"
        android:text="@string/dialog_button_connect"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_dialog_connect_to_server"
        app:layout_constraintTop_toBottomOf="@+id/txil_security_code_dialog_connect_to_server" />

    <Button
        android:id="@+id/btn_cancel_dialog_connect_to_server"
        style="@style/TextButtonStyle"
        android:layout_marginTop="8dp"
        android:nextFocusDown="@+id/tiet_security_code_dialog_connect_to_server"
        android:text="@string/dialog_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txil_security_code_dialog_connect_to_server" />

</android.support.constraint.ConstraintLayout>

